--- a/ssmweb/src/main/resources/db.properties
+++ b/ssmweb/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/huaxing?characterEncoding=utf-8
+db.url=jdbc:mysql://39.107.227.214:3306/cloud-home?characterEncoding=utf-8
 db.username=root
 db.password=abc123
 
